Added Upscale Feature

--- a/notebooks/image_url+query.ipynb
+++ b/notebooks/image_url+query.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# !pip install llm==\"0.12\" chromadb==\"0.4.17\" watchdog==\"3.0.0\" supabase pinecone-client\n",
+        "# !pip install llm==\"0.12\" chromadb==\"0.4.17\" watchdog==\"3.0.0\" supabase pinecone-client gradio\n",
         "# !llm install llm-clip"
       ],
       "metadata": {
@@ -67,30 +67,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# get_image_url(\"Alden Black Nightstand.jpg\")"
+        "get_image_url(\"Bowery Dark Tone Platform Bed.jpg\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 36
         },
         "id": "MLrfq6OItyHG",
-        "outputId": "e402290a-e094-4415-8242-f8b6356cce46"
+        "outputId": "99a2bcf8-e7a5-4edd-9472-e5edd4f5b37a"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'https://kxzrpvbbccaxzwlcalcy.supabase.co/storage/v1/object/public/image-bin/city_furniture/Alden Black Nightstand.jpg?'"
+              "'https://kxzrpvbbccaxzwlcalcy.supabase.co/storage/v1/object/public/image-bin/city_furniture/Bowery Dark Tone Platform Bed.jpg?'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 5
         }
       ]
     },
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "qCQcMj7_zvRe"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -143,13 +143,14 @@
       "metadata": {
         "id": "ANRn_onjEUKC"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "embeddings[0]"
+        "embeddings[29]\n",
+        "# len(embeddings)"
       ],
       "metadata": {
         "id": "MZwNS6yPOf_E"
@@ -197,7 +198,7 @@
       "metadata": {
         "id": "QRvgWfrpDRII"
       },
-      "execution_count": 22,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -205,17 +206,17 @@
       "source": [
         "## Query the embedding\n",
         "\n",
-        "query_embedding = model.embed(\"A large maplewood bed\")\n",
+        "query_embedding = model.embed(\"a black table made of engineering wood\")\n",
         "index_response = index.query(\n",
         "    vector=query_embedding,\n",
         "    top_k=1,\n",
         "    includeMetadata= True\n",
-        ")\n"
+        ")"
       ],
       "metadata": {
         "id": "WQGXG7PbHGV5"
       },
-      "execution_count": 23,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -228,26 +229,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NPNtiEIiHef4",
-        "outputId": "a1ea3320-e6a7-461f-ca55-9e01360cf8b5"
+        "outputId": "2b071589-e4e7-478c-b2e7-b841a479fba9"
       },
-      "execution_count": 24,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'matches': [{'id': 'dhJEOD7pmPfwnHQSSFfJKAUjFlFluVFglh9gZ8rX7YA=',\n",
-              "              'metadata': {'filePath': '/content/drive/MyDrive/City_Furniture/Cortina '\n",
-              "                                       'White Uph Platform Bed.jpg',\n",
-              "                           'image_url': 'https://kxzrpvbbccaxzwlcalcy.supabase.co/storage/v1/object/public/image-bin/city_furniture/Cortina%20White%20Uph%20Platform%20Bed.jpg?'},\n",
-              "              'score': 141.443253,\n",
+              "{'matches': [{'id': 'HtEe0PMDBOW6KTPsxTV1jAgrIxEn4JRBKmt5/5sjzb8=',\n",
+              "              'metadata': {'filePath': '/content/drive/MyDrive/City_Furniture/Alden '\n",
+              "                                       'Black Nightstand.jpg',\n",
+              "                           'image_url': 'https://kxzrpvbbccaxzwlcalcy.supabase.co/storage/v1/object/public/image-bin/city_furniture/Alden%20Black%20Nightstand.jpg?'},\n",
+              "              'score': 136.520721,\n",
               "              'values': []}],\n",
               " 'namespace': '',\n",
               " 'usage': {'read_units': 6}}"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 20
         }
       ]
     },
@@ -261,9 +262,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IWDx-lYdG8H_",
-        "outputId": "91701f39-20f9-4945-eb67-54575125caee"
+        "outputId": "e5f0b9f3-ad58-4e5d-e56d-8ff982047f3b"
       },
-      "execution_count": 25,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,12 +272,12 @@
             "text/plain": [
               "{'dimension': 512,\n",
               " 'index_fullness': 0.0,\n",
-              " 'namespaces': {'': {'vector_count': 20}},\n",
-              " 'total_vector_count': 20}"
+              " 'namespaces': {'': {'vector_count': 30}},\n",
+              " 'total_vector_count': 30}"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 15
         }
       ]
     },
@@ -321,7 +322,47 @@
       "metadata": {
         "id": "u-7gRQX7NyfH"
       },
-      "execution_count": 27,
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "from google.colab import userdata\n",
+        "\n",
+        "def upscale(task_id, index):\n",
+        "\n",
+        "  X_API_KEY = userdata.get(\"X_API_KEY\")\n",
+        "\n",
+        "  endpoint = \"https://api.midjourneyapi.xyz/mj/v2/upscale\"\n",
+        "\n",
+        "  headers = {\n",
+        "      \"X-API-KEY\": X_API_KEY\n",
+        "  }\n",
+        "\n",
+        "  data = {\n",
+        "      \"origin_task_id\": task_id,\n",
+        "      \"index\": index\n",
+        "  }\n",
+        "\n",
+        "  response = requests.post(endpoint, headers=headers, json=data)\n",
+        "  upscale_gen_req_output = response.json()\n",
+        "  task_id = upscale_gen_req_output[\"task_id\"]\n",
+        "  time.sleep(30)\n",
+        "\n",
+        "  ##### FETCH for Upscaled Image ######\n",
+        "  fetch_response = fetch(task_id)\n",
+        "  while fetch_response[\"status\"] == \"processing\":\n",
+        "    time.sleep(10)\n",
+        "    fetch_response = fetch(task_id)\n",
+        "  image_url = fetch_response[\"task_result\"][\"image_url\"]\n",
+        "  return image_url"
+      ],
+      "metadata": {
+        "id": "C_soQU8Go29o"
+      },
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -347,7 +388,7 @@
       "metadata": {
         "id": "TB4syB-Actdm"
       },
-      "execution_count": 28,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -358,32 +399,32 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 54
         },
         "id": "ygDImMe-w0R-",
-        "outputId": "a172c6c7-7a1b-4cbc-ed0e-b954e587a17a"
+        "outputId": "4b56eb6e-d72c-444f-d829-589c3369d3ec"
       },
-      "execution_count": 31,
+      "execution_count": 22,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter your query: A large bench\n"
+            "Enter your query: a black dining table made of engineering wood \n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'https://img.midjourneyapi.xyz/mj/cfcb5620-be84-4253-9130-767b6e8c63fc.png'"
+              "'https://img.midjourneyapi.xyz/mj/b4f2f1d4-5d60-43b3-ae7a-6a78135391b2.png'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 22
         }
       ]
     },
